CSS filters to generate different hair colours from base "blue" images.

--- a/game/base.css
+++ b/game/base.css
@@ -1006,3 +1006,68 @@ div[id|="numberslider-body"] input::-ms-thumb {
 }
 
 
+/*
+ * Hair & Eye colour filters
+ * Base colour is bright blue
+ * Expected document structure:
+ * - some outer element has .hair-$haircolour and .eye-$eyecolour classes
+ * - inner image element has .colour-hair class
+ */
+ .hair-black .colour-hair {
+    filter: hue-rotate(0deg) brightness(40%) saturate(0%);
+}
+.hair-blond .colour-hair {
+    filter: hue-rotate(-175deg) brightness(270%) saturate(50%);
+}
+.hair-blue .colour-hair {
+    filter: hue-rotate(0deg) brightness(100%) saturate(100%);
+}
+.hair-brown .colour-hair {
+    filter: hue-rotate(180deg) brightness(120%) saturate(60%);
+}
+.hair-ginger .colour-hair {
+    filter: hue-rotate(180deg) brightness(180%) saturate(70%);
+}
+.hair-green .colour-hair {
+    filter: hue-rotate(-90deg) brightness(110%) saturate(100%);
+}
+.hair-pink .colour-hair {
+    filter: hue-rotate(50deg) brightness(300%) saturate(60%);
+}
+.hair-purple .colour-hair {
+    filter: hue-rotate(35deg) brightness(140%) saturate(90%);
+}
+.hair-red .colour-hair {
+    filter: hue-rotate(0deg12) brightness(100%) saturate(100%);
+}
+
+/*
+ * Animation-related classes. Work-in-progress
+ * Expected document structure:
+ * div class="i256" -- should have the image size-related class
+ *    img class="anim-2s anim-2f" -- should have
+ *           1) duration-related class like anim-2s (2 seconds)
+ *           2) frame count-related class like anim-2f (2 frames)
+ */
+.i256 {
+	width: 256px;
+	height: 256px;
+	overflow: hidden;
+}
+.anim-1s, .anim-2s {
+    animation-iteration-count: infinite;
+    animation-name: anim-default;
+}
+
+/* duration related-classes. 
+   When adding, don't forget to add it to rule above with animation-iteration-count */
+.anim-1s { animation-duration: 1s; }
+.anim-2s { animation-duration: 2s; }
+
+/* frame-count related classes */
+.anim-2f { animation-timing-function: steps(2); }
+
+@keyframes anim-default {
+      0% { transform: translateX(0); }
+    100% { transform: translateX(-100%); }
+}
