hair, eyes, and clothing use single red/hazel image with CSS filters

--- a/game/base.css
+++ b/game/base.css
@@ -130,13 +130,13 @@ mouse.tooltip:hover span{
 
 .wetstage2 {
     opacity: 0.90;
-		filter: brightness: 0.95;
+		filter: brightness(0.95);
 
 }
 
 .wetstage3 {
     opacity: 0.75;
-		filter: brightness: 0.90;
+		filter: brightness(0.90);
 
 }
 
@@ -1007,38 +1007,85 @@ div[id|="numberslider-body"] input::-ms-thumb {
 
 
 /*
- * Hair & Eye colour filters
- * Base colour is bright blue
+ * Hair/Eye/Clothing colour filters
  * Expected document structure:
- * - some outer element has .hair-$haircolour and .eye-$eyecolour classes
- * - inner image element has .colour-hair class
+ * - some outer element has .hair-$haircolour (or .eye-/.lower-/.upper-/.under-) class
+ * - inner image element has .colour-hair (or -eye/-lower/-upper/-under) class
  */
- .hair-black .colour-hair {
-    filter: hue-rotate(0deg) brightness(40%) saturate(0%);
+/* Hair: base is red */
+.hair-black .colour-hair {
+	filter: hue-rotate(0deg) brightness(30%) saturate(0%) contrast(100%);
 }
 .hair-blond .colour-hair {
-    filter: hue-rotate(-175deg) brightness(270%) saturate(50%);
+	filter: hue-rotate(55deg) brightness(160%) saturate(60%) contrast(100%);
 }
 .hair-blue .colour-hair {
-    filter: hue-rotate(0deg) brightness(100%) saturate(100%);
+	filter: hue-rotate(210deg) brightness(60%) saturate(200%) contrast(150%);
 }
 .hair-brown .colour-hair {
-    filter: hue-rotate(180deg) brightness(120%) saturate(60%);
+	filter: hue-rotate(40deg) brightness(80%) saturate(80%) contrast(100%);
 }
 .hair-ginger .colour-hair {
-    filter: hue-rotate(180deg) brightness(180%) saturate(70%);
+	filter: hue-rotate(30deg) brightness(100%) saturate(100%) contrast(100%);
 }
 .hair-green .colour-hair {
-    filter: hue-rotate(-90deg) brightness(110%) saturate(100%);
+	filter: hue-rotate(90deg) brightness(100%) saturate(100%) contrast(100%);
 }
 .hair-pink .colour-hair {
-    filter: hue-rotate(50deg) brightness(300%) saturate(60%);
+	filter: hue-rotate(-20deg) brightness(150%) saturate(80%) contrast(100%);
 }
 .hair-purple .colour-hair {
-    filter: hue-rotate(35deg) brightness(140%) saturate(90%);
+	filter: hue-rotate(-90deg) brightness(70%) saturate(100%) contrast(140%);
 }
 .hair-red .colour-hair {
-    filter: hue-rotate(0deg12) brightness(100%) saturate(100%);
+	filter: hue-rotate(0deg) brightness(100%) saturate(100%) contrast(100%);
+}
+/* Eye: base is amber */
+.eye-dark-blue .colour-eye {
+	filter: hue-rotate(0deg) brightness(100%) saturate(100%) contrast(100%); /* TODO */
+}
+.eye-light-blue .colour-eye {
+	filter: hue-rotate(0deg) brightness(100%) saturate(100%) contrast(100%); /* TODO */
+}
+.eye-purple .colour-eye {
+	filter: hue-rotate(0deg) brightness(100%) saturate(100%) contrast(100%); /* TODO */
+}
+.eye-hazel .colour-eye {
+	filter: hue-rotate(0deg) brightness(100%) saturate(100%) contrast(100%); /* TODO */
+}
+.eye-amber .colour-eye {
+	filter: hue-rotate(0deg) brightness(100%) saturate(100%) contrast(100%);
+}
+.eye-green .colour-eye {
+	filter: hue-rotate(0deg) brightness(100%) saturate(100%) contrast(100%); /* TODO */
+}
+/* Clothing: base is red */
+.upper-blue .colour-upper, .lower-blue .colour-lower, .under-blue .colour-under {
+	filter: hue-rotate(-120deg) brightness(100%) saturate(100%) contrast(100%);
+}
+.upper-white .colour-upper, .lower-white .colour-lower, .under-white .colour-under {
+	filter: hue-rotate(40deg) brightness(400%) saturate(0%) contrast(100%);
+}
+.upper-red .colour-upper, .lower-red .colour-lower, .under-red .colour-under {
+	filter: hue-rotate(0deg) brightness(100%) saturate(100%) contrast(100%);
+}
+.upper-green .colour-upper, .lower-green .colour-lower, .under-green .colour-under {
+	filter: hue-rotate(0deg) brightness(100%) saturate(100%) contrast(100%);
+}
+.upper-black .colour-upper, .lower-black .colour-lower, .under-black .colour-under {
+	filter: hue-rotate(0deg) brightness(100%) saturate(0%) contrast(150%);
+}
+.upper-pink .colour-upper, .lower-pink .colour-lower, .under-pink .colour-under {
+	filter: hue-rotate(0deg) brightness(100%) saturate(100%) contrast(100%); /* TODO */
+}
+.upper-purple .colour-upper, .lower-purple .colour-lower, .under-purple .colour-under {
+	filter: hue-rotate(-90deg) brightness(100%) saturate(100%) contrast(100%);
+}
+.upper-tangerine .colour-upper, .lower-tangerine .colour-lower, .under-tangerine .colour-under {
+	filter: hue-rotate(0deg) brightness(100%) saturate(100%) contrast(100%); /* TODO */
+}
+.upper-yellow .colour-upper, .lower-yellow .colour-lower, .under-yellow .colour-under {
+	filter: hue-rotate(60deg) brightness(350%) saturate(150%) contrast(150%);
 }
 
 /*
