--- a/game/base.css
+++ b/game/base.css
@@ -1014,78 +1014,78 @@ div[id|="numberslider-body"] input::-ms-thumb {
  */
 /* Hair: base is red */
 .hair-black .colour-hair {
-	filter: hue-rotate(0deg) brightness(30%) saturate(0%) contrast(100%);
+	filter: hue-rotate(0deg) saturate(0%) brightness(30%) contrast(100%);
 }
 .hair-blond .colour-hair {
-	filter: hue-rotate(55deg) brightness(160%) saturate(60%) contrast(100%);
+	filter: hue-rotate(55deg) saturate(60%) brightness(160%) contrast(100%);
 }
 .hair-blue .colour-hair {
-	filter: hue-rotate(210deg) brightness(60%) saturate(200%) contrast(150%);
+	filter: hue-rotate(210deg) saturate(200%) brightness(60%) contrast(150%);
 }
 .hair-brown .colour-hair {
-	filter: hue-rotate(40deg) brightness(80%) saturate(80%) contrast(100%);
+	filter: hue-rotate(40deg) saturate(80%) brightness(80%) contrast(100%);
 }
 .hair-ginger .colour-hair {
-	filter: hue-rotate(30deg) brightness(100%) saturate(100%) contrast(100%);
+	filter: hue-rotate(30deg) saturate(100%) brightness(100%) contrast(100%);
 }
 .hair-green .colour-hair {
-	filter: hue-rotate(90deg) brightness(100%) saturate(100%) contrast(100%);
+	filter: hue-rotate(90deg) saturate(100%) brightness(100%) contrast(100%);
 }
 .hair-pink .colour-hair {
-	filter: hue-rotate(-20deg) brightness(150%) saturate(80%) contrast(100%);
+	filter: hue-rotate(-20deg) saturate(80%) brightness(150%) contrast(100%);
 }
 .hair-purple .colour-hair {
-	filter: hue-rotate(-90deg) brightness(70%) saturate(100%) contrast(140%);
+	filter: hue-rotate(-90deg) saturate(100%) brightness(70%) contrast(140%);
 }
 .hair-red .colour-hair {
-	filter: hue-rotate(0deg) brightness(100%) saturate(100%) contrast(100%);
+	filter: hue-rotate(0deg) saturate(100%) brightness(100%) contrast(100%);
 }
-/* Eye: base is amber */
+/* Eye: base is hazel */
 .eye-dark-blue .colour-eye {
-	filter: hue-rotate(0deg) brightness(100%) saturate(100%) contrast(100%); /* TODO */
+	filter: hue-rotate(170deg) brightness(110%) saturate(80%) contrast(100%);
 }
 .eye-light-blue .colour-eye {
-	filter: hue-rotate(0deg) brightness(100%) saturate(100%) contrast(100%); /* TODO */
+	filter: hue-rotate(150deg) brightness(160%) saturate(40%) contrast(100%);
 }
 .eye-purple .colour-eye {
-	filter: hue-rotate(0deg) brightness(100%) saturate(100%) contrast(100%); /* TODO */
+	filter: hue-rotate(-120deg) brightness(100%) saturate(100%) contrast(100%);
 }
 .eye-hazel .colour-eye {
-	filter: hue-rotate(0deg) brightness(100%) saturate(100%) contrast(100%); /* TODO */
+	filter: hue-rotate(0deg) saturate(100%) brightness(100%) contrast(100%);
 }
 .eye-amber .colour-eye {
-	filter: hue-rotate(0deg) brightness(100%) saturate(100%) contrast(100%);
+	filter: hue-rotate(0deg) brightness(170%) saturate(100%) contrast(100%);
 }
 .eye-green .colour-eye {
-	filter: hue-rotate(0deg) brightness(100%) saturate(100%) contrast(100%); /* TODO */
+	filter: hue-rotate(30deg) brightness(140%) saturate(100%) contrast(100%);
 }
 /* Clothing: base is red */
 .upper-blue .colour-upper, .lower-blue .colour-lower, .under-blue .colour-under {
-	filter: hue-rotate(-120deg) brightness(100%) saturate(100%) contrast(100%);
+	filter: hue-rotate(-120deg) saturate(100%) brightness(100%) contrast(100%);
 }
 .upper-white .colour-upper, .lower-white .colour-lower, .under-white .colour-under {
-	filter: hue-rotate(40deg) brightness(400%) saturate(0%) contrast(100%);
+	filter: hue-rotate(40deg) saturate(0%) brightness(400%) contrast(100%);
 }
 .upper-red .colour-upper, .lower-red .colour-lower, .under-red .colour-under {
-	filter: hue-rotate(0deg) brightness(100%) saturate(100%) contrast(100%);
+	filter: hue-rotate(0deg) saturate(100%) brightness(100%) contrast(100%);
 }
 .upper-green .colour-upper, .lower-green .colour-lower, .under-green .colour-under {
-	filter: hue-rotate(0deg) brightness(100%) saturate(100%) contrast(100%);
+	filter: hue-rotate(120deg) saturate(100%) brightness(150%) contrast(100%);
 }
 .upper-black .colour-upper, .lower-black .colour-lower, .under-black .colour-under {
-	filter: hue-rotate(0deg) brightness(100%) saturate(0%) contrast(150%);
+	filter: hue-rotate(0deg) saturate(0%) brightness(100%) contrast(150%);
 }
 .upper-pink .colour-upper, .lower-pink .colour-lower, .under-pink .colour-under {
-	filter: hue-rotate(0deg) brightness(100%) saturate(100%) contrast(100%); /* TODO */
+	filter: hue-rotate(-30deg) saturate(50%) contrast(100%) brightness(160%);
 }
 .upper-purple .colour-upper, .lower-purple .colour-lower, .under-purple .colour-under {
-	filter: hue-rotate(-90deg) brightness(100%) saturate(100%) contrast(100%);
+	filter: hue-rotate(-90deg) saturate(100%) brightness(100%) contrast(100%);
 }
 .upper-tangerine .colour-upper, .lower-tangerine .colour-lower, .under-tangerine .colour-under {
-	filter: hue-rotate(0deg) brightness(100%) saturate(100%) contrast(100%); /* TODO */
+	filter: hue-rotate(60deg) saturate(150%) brightness(250%) contrast(150%);
 }
 .upper-yellow .colour-upper, .lower-yellow .colour-lower, .under-yellow .colour-under {
-	filter: hue-rotate(60deg) brightness(350%) saturate(150%) contrast(150%);
+	filter: hue-rotate(60deg) saturate(150%) brightness(350%) contrast(150%);
 }
 
 /*
