Image display refactoring (WIP)
<body> element gets class "has-images" or "no-images"

Layered images are to be grouped under one element like #img and have their
z-order adjusted by layer-??? classes

--- a/game/base.css
+++ b/game/base.css
@@ -31,6 +31,14 @@ mouse.tooltip:hover span{
 	z-index: 500;
 }
 
+body.has-images header#title {
+	display: none;
+}
+body.has-images #story-caption {
+	/* 256 px: images
+	   2.5 em: ui-bar-body margin-top */
+	margin-top: calc(256px - 2.5em);
+}
 
 .red {
 	color: #EC3535;
@@ -160,13 +168,23 @@ mouse.tooltip:hover span{
 }
 
 
+#img {
+	height: 256px;
+	width: 256px;
+	overflow: hidden;
 
+	position: fixed;
+	top: 0px;
+	left: 0px;
+}
 
+#img > * {
+	position: absolute;
+	top: 0px;
+	left: 0px;
+}
 
-#bg {
-		position: fixed;
-		left: 0px;
-		top: 0px;
+.layer-bg {
 	z-index: 0;
 }
 
@@ -241,172 +259,79 @@ mouse.tooltip:hover span{
 	z-index: 1;
 }
 
-#backhair {
-		position: absolute;
-		left: 0px;
-		top: 0px;
+/*
+removed unused:
+#arm #underacc #legs #feet #bottom #top #sleeve #outer #outersleeve #neckacc
+*/
+
+
+.layer-backhair {
 	z-index: 10;
 }
-
-#base {
-		position: absolute;
-		left: 0px;
-		top: 0px;
+.layer-base {
 	z-index: 20;
 }
-
-#hirsute {
-		position: absolute;
-		left: 0px;
-		top: 0px;
+.layer-hirsute {
 	z-index: 21;
 }
-
-#arm {
-		position: absolute;
-		left: 0px;
-		top: 0px;
-	z-index: 25;
-}
-
-#eyes {
-		position: absolute;
-		left: 0px;
-		top: 0px;
+.layer-eyes {
 	z-index: 30;
 }
-
-#sclera {
-		position: absolute;
-		left: 0px;
-		top: 0px;
+.layer-sclera {
 	z-index: 35;
 }
-
-#mouth {
-		position: absolute;
-		left: 0px;
-		top: 0px;
+.layer-mouth {
 	z-index: 40;
 }
-
-#blush {
-		position: absolute;
-		left: 0px;
-		top: 0px;
+.layer-blush {
 	z-index: 50;
 }
-
-#tears {
-		position: absolute;
-		left: 0px;
-		top: 0px;
+.layer-tears {
 	z-index: 55;
 }
-
-#hair {
-		position: absolute;
-		left: 0px;
-		top: 0px;
+.layer-hair {
 	z-index: 60;
 }
-
-#brow {
-		position: absolute;
-		left: 0px;
-		top: 0px;
+.layer-brow {
 	z-index: 62;
 }
-
-
-#lashes {
-		position: absolute;
-		left: 0px;
-		top: 0px;
+.layer-lashes {
 	z-index: 64;
 }
-
-#underacc {
-		position: absolute;
-		left: 0px;
-		top: 0px;
-	z-index: 70;
-}
-
-#under {
-		position: absolute;
-		left: 0px;
-		top: 0px;
+.layer-under {
 	z-index: 75;
 }
-
-#legs {
-		position: absolute;
-		left: 0px;
-		top: 0px;
+.layer-legsacc {
 	z-index: 80;
 }
-
-#feet {
-		position: absolute;
-		left: 0px;
-		top: 0px;
+.layer-feetacc {
 	z-index: 85;
 }
-
-#bottom {
-		position: absolute;
-		left: 0px;
-		top: 0px;
+.layer-lower {
 	z-index: 90;
 }
-
-#top {
-		position: absolute;
-		left: 0px;
-		top: 0px;
+.layer-upper {
+	z-index: 95;
+}
+.layer-collar {
 	z-index: 100;
 }
-
-#sleeve {
-		position: absolute;
-		left: 0px;
-		top: 0px;
+.layer-rightarm {
 	z-index: 105;
 }
-
-#outer {
-		position: absolute;
-		left: 0px;
-		top: 0px;
+.layer-leftarm {
+	z-index: 105;
+}
+.layer-rightarmclothes {
 	z-index: 110;
 }
-
-#outersleeve {
-		position: absolute;
-		left: 0px;
-		top: 0px;
-	z-index: 115;
+.layer-leftarmclothes {
+	z-index: 110;
 }
-
-#neckacc {
-		position: absolute;
-		left: 0px;
-		top: 0px;
-	z-index: 120;
-}
-
-#faceacc {
-		position: absolute;
-		left: 0px;
-		top: 0px;
+.layer-faceacc {
 	z-index: 125;
 }
-
-#headacc {
-		position: absolute;
-		left: 0px;
-		top: 0px;
+.layer-headacc {
 	z-index: 130;
 }
 
@@ -674,70 +599,6 @@ mouse.tooltip:hover span{
 
 
 
-#lower {
-		position: absolute;
-		left: 0px;
-		top: 0px;
-	z-index: 90;
-}
-
-#upper {
-		position: absolute;
-		left: 0px;
-		top: 0px;
-	z-index: 95;
-}
-
-
-#collar {
-		position: absolute;
-		left: 0px;
-		top: 0px;
-	z-index: 100;
-}
-
-#rightarm {
-		position: absolute;
-		left: 0px;
-		top: 0px;
-	z-index: 105;
-}
-
-#leftarm {
-		position: absolute;
-		left: 0px;
-		top: 0px;
-	z-index: 105;
-}
-
-#rightarmclothes {
-		position: absolute;
-		left: 0px;
-		top: 0px;
-	z-index: 110;
-}
-
-
-#leftarmclothes {
-		position: absolute;
-		left: 0px;
-		top: 0px;
-	z-index: 110;
-}
-
-#legsacc {
-		position: absolute;
-		left: 0px;
-		top: 0px;
-	z-index: 80;
-}
-
-#feetacc {
-		position: absolute;
-		left: 0px;
-		top: 0px;
-	z-index: 85;
-}
 
 
 
@@ -1091,8 +952,9 @@ div[id|="numberslider-body"] input::-ms-thumb {
 /*
  * Animation-related classes. Work-in-progress
  * Expected document structure:
- * div class="i256" -- should have the image size-related class
- *    img class="anim-2s anim-2f" -- should have
+ * <div class="i256" -- should have the image size-related class
+ *                     (or have fixed size & overflow: hidden any other way)
+ *    <img class="anim-2s anim-2f" -- should have
  *           1) duration-related class like anim-2s (2 seconds)
  *           2) frame count-related class like anim-2f (2 frames)
  */
