Rest of multi-layered images uses layer classes instead of ids

--- a/game/base.css
+++ b/game/base.css
@@ -224,35 +224,35 @@ body.has-images #story-caption {
 
 }
 
-#xrayvaginal {
+#xrayvaginal, #divsex #xrayvaginal {
 		position: absolute;
 		left: 0px;
 		top: 0px;
 	z-index: 3;
 }
 
-#xrayvaginalcum {
+#xrayvaginalcum, #divsex #xrayvaginalcum {
 		position: absolute;
 		left: 0px;
 		top: 0px;
 	z-index: 4;
 }
 
-#xraypenile {
+#xraypenile, #divsex #xraypenile {
 		position: absolute;
 		left: 0px;
 		top: 0px;
 	z-index: 2;
 }
 
-#xrayanal {
+#xrayanal, #divsex #xrayanal {
 		position: absolute;
 		left: 512px;
 		top: 0px;
 	z-index: 1;
 }
 
-#xrayandroidanal {
+#xrayandroidanal, #divsex #xrayandroidanal {
 		position: relative;
 		left: 0px;
 		top: -150px;
@@ -352,6 +352,11 @@ removed unused:
 		width: 768px;
 
 }
+#divsex > * {
+	position: absolute;
+	left: 256px;
+	top: 0px;
+}
 
 #divandroidsex {
 		position: relative;
@@ -362,185 +367,91 @@ removed unused:
 
 }
 
-#voreback {
-		position: absolute;
-		left: 256px;
-		top: 0px;
-	z-index: -20;
-}
-
-
-
-#sexbaseback {
-		position: absolute;
-		left: 256px;
-		top: 0px;
-	z-index: 1;
-}
-
-#closepenis {
+#closepenis, #divsex #closepenis {
 		position: absolute;
 		left: 321px;
 		top: -30px;
 	z-index: 250;
 }
 
-#closeanus {
+#closeanus, #divsex #closeanus {
 		position: absolute;
 		left: 451px;
 		top: -30px;
 	z-index: 250;
 }
 
-#closevagina {
+#closevagina, #divsex #closevagina {
 		position: absolute;
 		left: 386px;
 		top: -30px;
 	z-index: 250;
 }
 
-#sexpenis {
-		position: absolute;
-		left: 256px;
-		top: 0px;
+.layer-voreback {
+	z-index: -20;
+}
+.layer-sexbaseback {
+	z-index: 1;
+}
+.layer-sexpenis {
 	z-index: 5;
 }
-
-#beastback {
-		position: absolute;
-		left: 256px;
-		top: 0px;
+.layer-beastback {
 	z-index: 6;
 }
-
-#sexbase {
-		position: absolute;
-		left: 256px;
-		top: 0px;
+.layer-sexbase {
 	z-index: 10;
 }
-
-#sexbaseoverlay {
-		position: absolute;
-		left: 256px;
-		top: 0px;
+.layer-sexbaseoverlay {
 	z-index: 12;
 }
-
-#sexeyes {
-		position: absolute;
-		left: 256px;
-		top: 0px;
+.layer-sexeyes {
 	z-index: 20;
 }
-
-#sexsclera {
-		position: absolute;
-		left: 256px;
-		top: 0px;
+.layer-sexsclera {
 	z-index: 30;
 }
-
-#sexmouth {
-		position: absolute;
-		left: 256px;
-		top: 0px;
+.layer-sexmouth {
 	z-index: 40;
 }
-
-
-#sexblush {
-		position: absolute;
-		left: 256px;
-		top: 0px;
+.layer-sexblush {
 	z-index: 50;
 }
-
-
-
-#sextears {
-		position: absolute;
-		left: 256px;
-		top: 0px;
+.layer-sextears {
 	z-index: 60;
 }
-
-#beastfront {
-		position: absolute;
-		left: 256px;
-		top: 0px;
+.layer-beastfront {
 	z-index: 65;
 }
-
-#sexhair {
-		position: absolute;
-		left: 256px;
-		top: 0px;
+.layer-sexhair {
 	z-index: 70;
 }
-
-
-#sexbrow {
-		position: absolute;
-		left: 256px;
-		top: 0px;
+.layer-sexbrow {
 	z-index: 80;
 }
-
-#sexlashes {
-		position: absolute;
-		left: 256px;
-		top: 0px;
+.layer-sexlashes {
 	z-index: 90;
 }
-
-#sexbasefront {
-		position: absolute;
-		left: 256px;
-		top: 0px;
+.layer-sexbasefront {
 	z-index: 100;
 }
-
-#doggyhirsute {
-		position: absolute;
-		left: 256px;
-		top: 0px;
+.layer-doggyhirsute {
 	z-index: 101;
 }
-
-#sexunder {
-		position: absolute;
-		left: 256px;
-		top: 0px;
+.layer-sexunder {
 	z-index: 102;
 }
-
-#sexlower {
-		position: absolute;
-		left: 256px;
-		top: 0px;
+.layer-sexlower {
 	z-index: 104;
 }
-
-#sexupper {
-		position: absolute;
-		left: 256px;
-		top: 0px;
+.layer-sexupper {
 	z-index: 106;
 }
-
-#sexaboveclothes {
-		position: absolute;
-		left: 256px;
-		top: 0px;
+.layer-sexaboveclothes {
 	z-index: 108;
 }
-
-
-#foreground {
-		position: absolute;
-		left: 256px;
-		top: 0px;
+.layer-foreground {
 	z-index: 200;
 }
 
