Body & clothing GIFs converted to PNGs

--- a/game/base.css
+++ b/game/base.css
@@ -898,15 +898,15 @@ div[id|="numberslider-body"] input::-ms-thumb {
 
 /* joint duration & frame-count classes */
 
-/* generic idle animation, -slow/-mid/-fast */
-.anim-idle-1f-slow { }
-.anim-idle-2f-slow {
+/* generic idle animation, -slow(default)/-mid/-fast  */
+.anim-idle-1f, .anim-idle-1f-slow { }
+.anim-idle-2f, .anim-idle-2f-slow {
 	animation-duration: 2s; /* 1s x 2 */
 	animation-timing-function: steps(2);
 	animation-iteration-count: infinite;
 	animation-name: anim-default;
 }
-.anim-idle-3f-slow {
+.anim-idle-3f, .anim-idle-3f-slow {
 	animation-duration: 3s; /* 1s x 3 */
 	animation-timing-function: steps(3);
 	animation-iteration-count: infinite;
