--- a/game/base.css
+++ b/game/base.css
@@ -352,19 +352,18 @@ removed unused:
 		width: 768px;
 
 }
-#divsex > * {
-	position: absolute;
-	left: 256px;
-	top: 0px;
+#divsex > *, #divandroidsex > * {
+    position: absolute;
+    left: 256px;
+    top: 0px;
 }
 
 #divandroidsex {
-		position: relative;
-		display: inline-block;
-		height: 256px;
-		width: 256px;
-		left: -256px;
-
+        position: relative;
+        display: inline-block;
+        height: 256px;
+        width: 256px;
+        left: -256px;
 }
 
 #closepenis, #divsex #closepenis {
