--- a/game/base.css
+++ b/game/base.css
@@ -268,6 +268,9 @@ removed unused:
 .layer-mouth {
 	z-index: 40;
 }
+.layer-breasts {
+	z-index: 35;
+}
 .layer-blush {
 	z-index: 50;
 }
@@ -725,6 +728,13 @@ div[id|="numberslider-body"] input::-ms-thumb {
 	-webkit-filter: hue-rotate(0deg) saturate(0%) brightness(190%) contrast(100%);
 	filter: hue-rotate(0deg) saturate(0%) brightness(190%) contrast(100%);
 }
+.hair-deepblue .colour-hair {
+	-webkit-filter: hue-rotate(0deg) saturate(0%) brightness(190%) contrast(100%);
+	filter: hue-rotate(240deg) saturate(100%) brightness(40%) contrast(120%);
+}
+
+
+hue-rotate(240deg) saturate(100%) brightness(40%) contrast(120%)
 
 /* Eye: base is hazel */
 .eye-dark-blue .colour-eye {
