--- a/game/base.css
+++ b/game/base.css
@@ -316,12 +316,16 @@ removed unused:
 .layer-leftarmclothes {
 	z-index: 110;
 }
+.layer-fronthair {
+	z-index: 120;
+}
 .layer-faceacc {
 	z-index: 125;
 }
 .layer-headacc {
 	z-index: 130;
 }
+
 
 #divsex {
 		position: relative;
@@ -680,6 +684,10 @@ div[id|="numberslider-body"] input::-ms-thumb {
 	-webkit-filter: hue-rotate(40deg) saturate(100%) brightness(100%) contrast(110%);
 	filter: hue-rotate(40deg) saturate(100%) brightness(100%) contrast(110%);
 }
+.hair-darkbrown .colour-hair {
+	-webkit-filter: hue-rotate(40deg) saturate(70%) brightness(20%) contrast(100%);
+	filter: hue-rotate(40deg) saturate(70%) brightness(20%) contrast(100%);
+}
 .hair-strawberryblond .colour-hair {
 	-webkit-filter: hue-rotate(30deg) saturate(110%) brightness(110%) contrast(100%);
 	filter: hue-rotate(30deg) saturate(110%) brightness(110%) contrast(100%);
@@ -734,7 +742,9 @@ div[id|="numberslider-body"] input::-ms-thumb {
 }
 
 
-hue-rotate(240deg) saturate(100%) brightness(40%) contrast(120%)
+
+
+
 
 /* Eye: base is hazel */
 .eye-dark-blue .colour-eye {
