css: labels should have a cursor hand
So when you hover over, say the label in:

[*] male

The cursor shows that it is clickable

--- a/game/base.css
+++ b/game/base.css
@@ -657,6 +657,10 @@ div[id|="numberslider-body"] input::-ms-thumb {
 	width: 33px;
 }
 
+label {
+	cursor: pointer;
+}
+
 .meter {
 	position: relative;
 	height: 0.3em;
