Clothing Shop Adjustments
- Fixed missing $accessorycolouraction in TryOn

- Quality of life adjustment to prevent color radios from resetting when trying on clothes

--- a/game/base.css
+++ b/game/base.css
@@ -23,11 +23,30 @@ mouse.tooltip:hover span {
 	background:#C4C4C4 repeat-x 0 0;
 }
 
-.closeButton {
+.closeButton, .macro-button{
 	width: 100%;
 	font-size: 110%;
 	max-width: 240px;
-	background-color: grey;
+	background-color: #222;
+    border: 1px solid #444;
+}
+
+.fixedClose {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    background-color: #222;
+    width: auto;
+    height: auto;
+    margin: 0;
+    z-index: 1;
+    padding: 0;
+    border-bottom: 1px solid #fff;
+}
+
+.macro-button:hover{
+	background-color: #333;
+    border: 1px solid #fff;
 }
 
 .menuButtons ul    {
@@ -51,12 +70,13 @@ mouse.tooltip:hover span {
     top: 20px;
     bottom: 20px;
     left: 20px;
+    right:20px;
     height: auto;
-    width: 90%;
+    width: auto;
     border: 2px #fff solid;
     background-color: #222;
     text-align: left;
-    padding: 3px;
+    padding: 0 3px 3px;
     overflow-y: scroll;
     z-index: 1000;
     max-width: 1000px;
