Save Export/Import Changes and other fixes
- Random Text in caption removed
- femaleclimax fixed

--- a/game/base.css
+++ b/game/base.css
@@ -23,6 +23,11 @@ mouse.tooltip:hover span {
 	background:#C4C4C4 repeat-x 0 0;
 }
 
+#saveDataInput  {
+    min-width: inherit;
+    width: 95%
+}
+
 .closeButton, .macro-button{
 	width: 100%;
 	font-size: 110%;
@@ -82,7 +87,7 @@ mouse.tooltip:hover span {
     max-width: 1000px;
 }
 
-@media only screen and (min-width: 601px) {
+@media only screen and (min-width: 801px) {
    .customOverlay {
 		left: 300px;
 	}
