Additions and improvements to overlays
Added existing save/load functionality to options menu
Added reset button to options menu
Removed the existing save/restart buttons
Moved export/import by text to its own widget
Added export/import by file to export/import widget

Improved how the overlays are opened and closed to reduce menu button code

Adjusted debug menu button to match the text with the other menu buttons

--- a/game/base.css
+++ b/game/base.css
@@ -54,21 +54,6 @@ mouse.tooltip:hover span {
     border: 1px solid #fff;
 }
 
-.menuButtons ul    {
-	margin: 1em 0 0;
-	padding: 0;
-	list-style: none;
-}
-
-.menuButtons ul li {
-	margin: 0;
-}
-
-.menuButtons ul li input{
-	width: 100%;
-	text-transform: capitalize;
-}
-
 .customOverlay {
     display: block;
     position:fixed;
@@ -138,6 +123,46 @@ mouse.tooltip:hover span {
 
 .close  {
 	background-color: darkred;
+}
+
+#savesList  {
+    border: 1px solid #ccc;
+    max-width: 700px;
+    width: 95%;
+}
+
+#savesList tr   {
+    border-top: 1px solid #999;
+    margin: 1px;
+}
+
+#savesList tr:first-child   {
+    border-top: 1px solid #ccc;
+}
+
+#savesList tr td:first-child   {
+    padding: 8px;
+}
+
+#savesList tr td    {
+    margin: 1px;
+}
+
+.right  {
+    float: right;
+}
+
+.saveMenuButton {
+    background-color: #4372FF !important;
+    margin: 4px 4px 4px 0;
+}
+
+.saveMenuButton:hover {
+    background-color: #4372FF !important;
+}
+
+#menu   {
+    display: none;
 }
 
 #ui-bar-toggle {
