Moved broken color coding to overlays and minor fixes
- Removed unused StoryMenu due to being hidden
- Additional css bar fixes

--- a/game/base.css
+++ b/game/base.css
@@ -23,6 +23,11 @@ mouse.tooltip:hover span {
 	background:#C4C4C4 repeat-x 0 0;
 }
 
+#saveDataInput  {
+    min-width: inherit;
+    width: 95%
+}
+
 .passage{
     -o-transition:.2s ease-in;
     transition:.2s ease-in;
@@ -48,11 +53,11 @@ mouse.tooltip:hover span {
     padding: 0;
     border-bottom: 1px solid #fff;
 }
+
 .macro-button:hover{
 	background-color: #333;
     border: 1px solid #fff;
 }
-
 
 .customOverlay {
     display: block;
@@ -72,7 +77,7 @@ mouse.tooltip:hover span {
     max-width: 1000px;
 }
 
-@media only screen and (min-width: 601px) {
+@media only screen and (min-width: 801px) {
    .customOverlay {
         left: 300px;
     }
@@ -117,12 +122,58 @@ mouse.tooltip:hover span {
     clear: both;
 }
 
+#statsHelp{
+    overflow-y: scroll;
+    height: auto;
+    max-height: 200px;
+}
+
 .hidden {
     display: none;
 }
 
 .close  {
     background-color: darkred;
+}
+
+#savesList  {
+    border: 1px solid #ccc;
+    max-width: 700px;
+    width: 95%;
+}
+
+#savesList tr   {
+    border-top: 1px solid #999;
+    margin: 1px;
+}
+
+#savesList tr:first-child   {
+    border-top: 1px solid #ccc;
+}
+
+#savesList tr td:first-child   {
+    padding: 8px;
+}
+
+#savesList tr td    {
+    margin: 1px;
+}
+
+.right  {
+    float: right;
+}
+
+.saveMenuButton {
+    background-color: #4372FF !important;
+    margin: 4px 4px 4px 0;
+}
+
+.saveMenuButton:hover {
+    background-color: #4372FF !important;
+}
+
+#menu   {
+    display: none;
 }
 
 #ui-bar-toggle {
@@ -296,7 +347,7 @@ body.has-images #story-caption {
     width: 256px;
     overflow: hidden;
     border-top: #fff 2px solid;
-    border-bottom: #fff 2px solid;							  
+    border-bottom: #fff 2px solid;
     position: fixed;
     top: 232px;
     left: 0px;
@@ -881,7 +932,7 @@ label {
 	top: 0;
 	height: 0.3em;
 	background-color: #EC3535;
-	z-index: -10;
+	z-index: 0;
 }
 
 .pinkbar {
@@ -890,7 +941,7 @@ label {
 	top: 0;
 	height: 0.3em;
 	background-color: #E40081;
-	z-index: -10;
+	z-index: 0;
 }
 
 
@@ -900,7 +951,7 @@ label {
 	top: 0;
 	height: 0.3em;
 	background-color: #AA4BC8;
-	z-index: -10;
+	z-index: 0;
 }
 
 .bluebar {
@@ -909,7 +960,7 @@ label {
 	top: 0;
 	height: 0.3em;
 	background-color: #4372FF;
-	z-index: -10;
+	z-index: 0;
 }
 
 .lbluebar {
@@ -918,7 +969,7 @@ label {
 	top: 0;
 	height: 0.3em;
 	background-color: #559BC0;
-	z-index: -10;
+	z-index: 0;
 }
 
 
@@ -928,7 +979,7 @@ label {
 	top: 0;
 	height: 0.3em;
 	background-color: #08C1C1;
-	z-index: -10;
+	z-index: 0;
 }
 
 .greenbar {
@@ -937,7 +988,7 @@ label {
 	top: 0;
 	height: 0.3em;
 	background-color: #38B20A;
-	z-index: -10;
+	z-index: 0;
 }
 
 .goldbar {
