--- a/game/base.css
+++ b/game/base.css
@@ -847,6 +847,7 @@ div[id|="numberbox-body"] button[id|="numberbox-plus"] {
 
 div[id|="numberslider-body"] {
 	display: inline-block;
+    width: 100%;
 }
 div[id|="numberslider-body"] span {
 	display: inline-block;
@@ -860,7 +861,8 @@ div[id|="numberslider-body"] input {
 	-webkit-appearance: none;
 	cursor: pointer;
 	height: 1.25em;
-	min-width: 20em;
+    width: 95%;
+	max-width: 20em;
 	vertical-align: middle;
 }
 div[id|="numberslider-body"] input:focus {
