Indentation and exception

--- a/game/base.css
+++ b/game/base.css
@@ -215,6 +215,15 @@ body.has-images #story-caption {
 	list-style: none;
 }
 
+.noIndent .link-internal {
+    padding-left:0px;
+}
+
+.link-internal {
+    padding-left:30px;
+}
+
+
 /*Wardrobe UI*/
 .clothingBox {
 	display: inline-block;
