--- a/game/base.css
+++ b/game/base.css
@@ -215,13 +215,7 @@ body.has-images #story-caption {
 	list-style: none;
 }
 
-.noIndent .link-internal {
-    padding-left:0px;
-}
 
-.link-internal {
-    padding-left:30px;
-}
 
 
 /*Wardrobe UI*/
@@ -429,7 +423,8 @@ body.has-images #story-caption {
 }
 
 #icon {
-	position: absolute;
+	position: static;
+	vertical-align:middle;
 }
 
 #daystate {
