--- a/game/base.css
+++ b/game/base.css
@@ -191,6 +191,28 @@ mouse.tooltip:hover span {
 	border: 1px solid #666;
 }
 
+#divmap {
+        position: relative;
+        display: inline-block;
+        height: 256px;
+        width: 256px;
+
+}
+
+#map {
+        position: absolute;
+        left: 0px;
+        top: 0px;
+    z-index: 10;
+}
+
+#maparrow {
+        position: absolute;
+        left: 0px;
+        top: 0px;
+    z-index: 20;
+}
+
 #ui-bar-toggle {
 	z-index: 500;
 }
