--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -801,6 +801,9 @@ removed unused:
 .layer-sexunder {
 	z-index: 102;
 }
+.layer-sexrightleg  {
+	z-index: 100;
+}
 .layer-sexlower {
 	z-index: 104;
 }
