Sidebar Caption Changes and bug fixes
- Fix to orgasm variable
- Added missing '$' to several variables relating to parasite checks

--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -988,6 +988,25 @@ label {
 	text-align: center;
 	z-index: -10;
 }
+
+.rightMeterText {
+	width: 38%;
+	float: left;
+	text-align: right;
+	padding-right: 2px;
+}
+
+.rightMeter {
+	position: relative;
+	height: 0.4em;
+	width: 60%;
+	background-color: gray;
+	text-align: center;
+	z-index: -10;
+	float: right;
+	margin-top: 0.6em;
+}
+
 .redbar {
 	position: absolute;
 	left: 0;
@@ -995,6 +1014,10 @@ label {
 	height: 0.3em;
 	background-color: #EC3535;
 	z-index: 0;
+}
+
+.rightMeter .redbar {
+	height: 0.4em;
 }
 
 .pinkbar {
@@ -1006,6 +1029,9 @@ label {
 	z-index: 0;
 }
 
+.rightMeter .pinkbar {
+	height: 0.4em;
+}
 
 .purplebar {
 	position: absolute;
@@ -1014,6 +1040,10 @@ label {
 	height: 0.3em;
 	background-color: #AA4BC8;
 	z-index: 0;
+}
+
+.rightMeter .purplebar {
+	height: 0.4em;
 }
 
 .bluebar {
@@ -1025,6 +1055,10 @@ label {
 	z-index: 0;
 }
 
+.rightMeter .bluebar {
+	height: 0.4em;
+}
+
 .lbluebar {
 	position: absolute;
 	left: 0;
@@ -1032,6 +1066,10 @@ label {
 	height: 0.3em;
 	background-color: #559BC0;
 	z-index: 0;
+}
+
+.rightMeter .lbluebar {
+	height: 0.4em;
 }
 
 .tealbar {
@@ -1043,6 +1081,10 @@ label {
 	z-index: 0;
 }
 
+.rightMeter .tealbar {
+	height: 0.4em;
+}
+
 .greenbar {
 	position: absolute;
 	left: 0;
@@ -1052,6 +1094,10 @@ label {
 	z-index: 0;
 }
 
+.rightMeter .greenbar {
+	height: 0.4em;
+}
+
 .goldbar {
 	position: absolute;
 	left: 0;
@@ -1059,6 +1105,10 @@ label {
 	height: 0.3em;
 	background-color: #FFD700;
 	z-index: 0;
+}
+
+.rightMeter .goldbar {
+	height: 0.4em;
 }
 
 
