Ear Slime additions and bug fixes
- Added slime encounter option for those who are both submissive and willing to go along with the slimes intentions
- Added the ability for the slime to limit you clothing to more seductive and lewd types
- Added the ability for existing clothing to be updated when changes are made to their defaults
- The above addition will cause lag when loading an older save for the first time and will only occur when clothes need to be updated again

Bug Fixes

- Fixed several cases where `<<genitals>>` should have been `<<genitals 1>>`
- Fixed a couple of cases where the brackets were missing from `his`
- Fixed an event where Whitney could place a parasite on your genitals when wears a chastity belt/cage
- Averaged out the reveal values of the oversize sweaters as they were incorrectly seen as `tasteful` rather than being at least `seductive`

--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -136,6 +136,14 @@ mouse.tooltip:hover span {
 	background-color: darkred;
 }
 
+#gameVersionDisplay {
+	position: fixed;
+	right: 3px;
+	top: 1px;
+	font-size: 0.6em;
+	color: #777;
+}
+
 #savesList {
 	border: 1px solid #ccc;
 	max-width: 700px;
@@ -1014,6 +1022,7 @@ label {
 	height: 0.3em;
 	background-color: #EC3535;
 	z-index: 0;
+	max-width: 100%;
 }
 
 .rightMeter .redbar {
@@ -1027,6 +1036,7 @@ label {
 	height: 0.3em;
 	background-color: #E40081;
 	z-index: 0;
+	max-width: 100%;
 }
 
 .rightMeter .pinkbar {
@@ -1040,6 +1050,7 @@ label {
 	height: 0.3em;
 	background-color: #AA4BC8;
 	z-index: 0;
+	max-width: 100%;
 }
 
 .rightMeter .purplebar {
@@ -1053,6 +1064,7 @@ label {
 	height: 0.3em;
 	background-color: #4372FF;
 	z-index: 0;
+	max-width: 100%;
 }
 
 .rightMeter .bluebar {
@@ -1066,6 +1078,7 @@ label {
 	height: 0.3em;
 	background-color: #559BC0;
 	z-index: 0;
+	max-width: 100%;
 }
 
 .rightMeter .lbluebar {
@@ -1079,6 +1092,7 @@ label {
 	height: 0.3em;
 	background-color: #08C1C1;
 	z-index: 0;
+	max-width: 100%;
 }
 
 .rightMeter .tealbar {
@@ -1092,6 +1106,7 @@ label {
 	height: 0.3em;
 	background-color: #38B20A;
 	z-index: 0;
+	max-width: 100%;
 }
 
 .rightMeter .greenbar {
@@ -1105,6 +1120,7 @@ label {
 	height: 0.3em;
 	background-color: #FFD700;
 	z-index: 0;
+	max-width: 100%;
 }
 
 .rightMeter .goldbar {
