--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -142,6 +142,8 @@ mouse.tooltip:hover span {
 	top: 1px;
 	font-size: 0.6em;
 	color: #777;
+	z-index: 1000;
+	background-color: #111;
 }
 
 #savesList {
