Added Initial Feats
- Overlay is accessed via its own button at the start menu or the button inside the statistics overlay
- Cheats disable the ability to earn feats on a permanent basis
- Added feats boost tab at the start of the game using the Vrelcoins from feats
- Makes use of local storage to transfer between saves
- Also completely stored inside saves for incognito users or those that lose their local data
- Feats are either unlocked the moment a check passes, after midnight or when meeting the requirements in a passage.
- Small overlay in the top right of the screen will be shown and overlap with each other and close on click or changing passage
- Added png and gif images of Vrelcoins designed by anon.

Other Changes
- Increases the minimum speed values to get `Perfect activity` anal parasites
- Fix to pregnancy when `rng` is undefined
- Fix for issue with wardrobe and `wear_delete` being undefined

--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -146,6 +146,78 @@ mouse.tooltip:hover span {
 	background-color: #111;
 }
 
+.feat {
+	/*display: none;*/
+	position: fixed;
+	right: 10px;
+	top: 20px;
+	height: 81px;
+	width: 80%;
+	max-width: 400px;
+	z-index: 1000;
+	background-color: gold;
+	padding: 2px;
+}
+
+.featList {
+	height: 81px;
+	width: 80%;
+	max-width: 400px;
+	background-color: gold;
+	padding: 2px;
+	float: left;
+}
+
+.featImage {
+	display: inline-block;
+	height: 100%;
+	width: 79px;
+	background-color: #333;
+}
+
+.dot {
+	height: 74px;
+	width: 74px;
+	background-color: #999;
+	border-radius: 50%;
+	display: inline-block;
+	margin: 3px;
+	position: absolute;
+}
+
+.featCoin {
+	position: absolute;
+	margin-top: 3px;
+	margin-left: 3px;
+}
+
+.featText {
+	display: inline-block;
+	height: 100%;
+	width: calc(100% - 84px);
+	background-color: #333;
+	float: right;
+}
+
+.featText .title {
+	font-weight: bold;
+	margin: 5px;
+}
+
+.featText .text {
+	margin: 5px;
+}
+
+.closeFeat {
+	position: fixed;
+	right: 10px;
+	top: 20px;
+	height: 75px;
+	width: 80%;
+	max-width: 400px;
+	z-index: 1001;
+}
+
 #savesList {
 	border: 1px solid #ccc;
 	max-width: 700px;
