Stats extension, debug lines and Fixes
- Made the `money, time, weekday` information in the sidebar clickable
- This will extend it to a second row, moving the weekday below and showing the fully date to the side of it
- Added debug line to man and beasts combat to help manage the layout
- required the variable `$debugLines` to be set to true
- adjustments to `<br>`s thanks to the debug lines
- fix to getting feats at any time since `args[0]` always failed to pass
- spelling fix to one feat

--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -322,16 +322,65 @@ mouse.tooltip:hover span {
 	z-index: 300;
 }
 
+.debugLines-audience {
+	border: dotted red 1px;
+}
+
+.debugLines-combat {
+	border: dotted yellow 1px;
+}
+
+.debugLines-effectsman {
+	border: dotted green 1px;
+}
+
+.debugLines-stateman {
+	border: dotted cyan 1px;
+}
+
+.debugLines-actionsman {
+	border: dotted pink 1px;
+}
+
+.debugLines-beast {
+	border: dotted blue 1px;
+}
+
+.debugLines-tentacles {
+	border: dotted yellow 1px;
+}
+
+.debugLines-actionstentacles {
+	border: dotted pink 1px;
+}
+
+.debugLines-effectstentacleadv {
+	border: dotted green 1px;
+}
+
+.debugLines-swarm {
+	border: dotted green 1px;
+}
+
+.debugLines-swarmactions {
+	border: dotted pink 1px;
+}
+
+.reducedLineHeight .passage {
+	line-height: 1.5;
+}
 
 body.has-images header#title {
 	display: none;
 }
-body.has-images #story-caption {
+body.has-images #story-caption #storyCaptionDiv {
 	/* 256 px: images
 	2.5 em: ui-bar-body margin-top */
 	margin-top: calc(256px - 2.5em);
 }
 
+body.has-images #story-caption .storyCaptionDivExtended {
+	margin-top: calc(281px - 2.5em) !important;
 }
 
 .nostyle {
@@ -488,12 +537,17 @@ body.has-images #story-caption {
 	position: fixed;
 	top: 232px;
 	left: 0px;
+	background-color: #222;
 }
 
 #stats > * {
 	position: absolute;
 	top: 232px;
 	left: 0px;
+}
+
+.statsExtended {
+	height: 45px !important;
 }
 
 .icon_ui {
@@ -514,10 +568,10 @@ body.has-images #story-caption {
 	height: 256px;
 	width: 256px;
 	overflow: hidden;
-
 	position: fixed;
 	top: 0px;
 	left: 0px;
+	background-color: #222;
 }
 
 #img > * {
