Added custom colors to combat images and fixes
- Fix for try on not applying colors correctly
- Adjustment to custom color maximum values to allow for more colors

--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -388,6 +388,19 @@ body.has-images #story-caption .storyCaptionDivExtended {
 }
 
 /*Wardrobe UI*/
+.wardrobeItem {
+	display: inline-block;
+	padding: 2px;
+	float: left;
+	border: solid 1px #aaa;
+	height: 30px;
+	width: 48%;
+	min-width: 400px;
+	margin: 0px 3px 3px;
+	white-space: nowrap;
+	overflow: hidden;
+}
+
 .clothingBox {
 	display: inline-block;
 	float: left;
@@ -407,6 +420,12 @@ body.has-images #story-caption .storyCaptionDivExtended {
 
 .clothingBox div ul{
 	margin-left: 0px;
+}
+
+#customColor div {
+	height: 30px;
+	width: 200px;
+	background-color: red;
 }
 
 .red {
@@ -1467,6 +1486,10 @@ label {
 .upper-wetbrown .colour-upper, .lower-wetbrown .colour-lower, .under_lower-wetbrown .colour-under_lower, .under_upper-wetbrown .colour-under_upper {
 	-webkit-filter: hue-rotate(60deg) saturate(150%) brightness(200%) contrast(100%) opacity(0.5);
 	filter: hue-rotate(60deg) saturate(150%) brightness(200%) contrast(100%) opacity(0.5);
+}
+.upper-wet .colour-upper, .lower-wet .colour-lower, .under_lower-wet .colour-under_lower, .under_upper-wet .colour-under_upper {
+	-webkit-filter: opacity(0.5);
+	filter: opacity(0.5);
 }
 
 /*
