Shop Layout changes and additions
- Added custom colours button to show and hide the UI
- Added checkbox to `DEFAULT OPTIONS` to determine whether to show the custom colours by default
- Change to `custom colours` UI to allow it to use less vertical space on larger screens
- Added text for the number of slots used and how many of the current item is owned.

- Fix to some chastity checks where `under_lower` should have been `genitals`

--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -387,6 +387,35 @@ body.has-images #story-caption .storyCaptionDivExtended {
 	list-style: none;
 }
 
+.shopCustomColors {
+	float:left;
+	width: 48%;
+	min-width: 375px;
+	border: solid 2px #555;
+	padding:4px;
+	height: 200px;
+}
+
+.shopImg {
+	height: 128px;
+	width: 128px;
+	overflow: hidden;
+	background-color: #222;
+}
+
+.shopImg > * {
+	position: absolute;
+	height: 128px;
+	overflow: hidden;
+}
+
+.hideImageOverflow {
+	overflow: hidden;
+    height: 128px;
+    width: 128px;
+    position: relative;
+}
+
 /*Wardrobe UI*/
 .wardrobeItem {
 	display: inline-block;
