PBHair Mod for both male and female

--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -818,8 +818,11 @@ removed unused:
 .layer-genitals {
 	z-index: 64;
 }
-.layer-under_lower {
+.layer-pbhair {
 	z-index: 65;
+}
+.layer-under_lower {
+	z-index: 66;
 }
 .layer-under_lower-top {
 	z-index: 67;
