--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -634,6 +634,14 @@ body.has-images #story-caption .storyCaptionDivExtended {
 	left: 0px;
 }
 
+.imgLighten {
+	background-color: #444 !important;
+}
+
+#ui-bar-toggle {
+	background-color: #222;
+}
+
 .icon_ui {
 	position: static !important;
 	height: 14px;
