--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -934,6 +934,11 @@ removed unused:
 .layer-parasite {
 	z-index: 160;
 }
+
+.layer-tailPenisCover {
+	z-index: 165;
+}
+
 #divsex {
 		position: relative;
 		display: inline-block;
