in a wardrobe, you can now see all info about a worn item

--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -431,6 +431,19 @@ body.has-images #story-caption .storyCaptionDivExtended {
 	overflow: hidden;
 }
 
+.wardrobeWornItem {
+      display: inline-block;
+        padding: 2px;
+        float: left;
+        border: solid 1px #aaa;
+        height: 100%;
+        width: 90%;
+        min-width: 400px;
+        margin: 0px 30px 9px 30px;
+        /*white-space: nowrap;*/
+        overflow: hidden;
+}
+
 #wardrobeLinks .selected {
 	color: #FFD700;
 	text-decoration: underline;
