--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -129,7 +129,7 @@ mouse.tooltip:hover span {
 }
 
 .hidden {
-	display: none;
+	display: none !important;;
 }
 
 .close {
@@ -431,17 +431,17 @@ body.has-images #story-caption .storyCaptionDivExtended {
 	overflow: hidden;
 }
 
-.wardrobeWornItem {
-      display: inline-block;
-        padding: 2px;
-        float: left;
-        border: solid 1px #aaa;
-        height: 100%;
-        width: 90%;
-        min-width: 400px;
-        margin: 0px 30px 9px 30px;
-        /*white-space: nowrap;*/
-        overflow: hidden;
+#wardrobeItemDetails {
+	display: inline-block;
+	padding: 2px;
+	float: left;
+	border: solid 1px #aaa;
+	height: 100%;
+	width: 90%;
+	min-width: 400px;
+	margin: 0px 30px 9px 30px;
+	/*white-space: nowrap;*/
+	overflow: hidden;
 }
 
 #wardrobeLinks .selected {
