--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -810,8 +810,11 @@ removed unused:
 #arm #underacc #legs #feet #bottom #top #sleeve #outer #outersleeve #neckacc
 */
 
-.layer-head-back {
+.layer-over_head-back {
 	z-index: 0;
+}
+.layer-head-back {
+	z-index: 1;
 }
 .layer-basehead {
 	z-index: 5;
@@ -944,6 +947,7 @@ removed unused:
 .layer-lower-top-high {
 	z-index: 117;
 }
+
 .layer-hairforwards {
 	z-index: 132;
 }
@@ -962,6 +966,9 @@ removed unused:
 .layer-head {
 	z-index: 150;
 }
+.layer-over_head {
+	z-index: 152;
+}
 .layer-penis {
 	z-index: 160;
 }
@@ -972,6 +979,19 @@ removed unused:
 
 .layer-tailPenisCover {
 	z-index: 165;
+}
+
+.layer-over_lower {
+	z-index: 170;
+}
+.layer-over_upper {
+	z-index: 171;
+}
+.layer-leftarmoverclothes {
+	z-index: 174;
+}
+.layer-rightarmoverclothes {
+	z-index: 174;
 }
 
 #divsex {
